# idf-simple-demo

./: .gitignore  README.md
.github/workflows/: codequality.yml  msbuild.yml
example/cmake_example/add_static_library/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
example/cmake_example/add_static_library/components/blufi/: CMakeLists.txt  component.mk
example/cmake_example/add_static_library/components/blufi/include/: blufi_security.h  iot_blufi.h
example/cmake_example/component_example/: CMakeLists.txt  Makefile  README.md
example/cmake_example/component_example/components/Beuere_Lib/: CMakeLists.txt  component.mk  readme.txt
example/cmake_example/component_example/components/Beuere_Lib/include/: beurer_algorithm.h
example/coex/ble_wifi_coex/: README.md  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3
example/coex/ble_wifi_coex_c3/: README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c3
example/peripherals/lcd_ledc_mcpwm/: CMakeLists.txt  Makefile
example/peripherals/one_uart_to_multi_uart/: README.md  sdkconfig
example/peripherals/touch_pad_interrupt_test/: CMakeLists.txt  README.md  pytest_touch_pad_interrupt_v2.py  sdkconfig  sdkconfig.old
example/protocols/cus_ip_ap_tcp_server/: CMakeLists.txt  Makefile  README.md
example/protocols/http_proxy/: CMakeLists.txt  README.md
example/protocols/http_request_static_ip/: CMakeLists.txt  Makefile
sta_ap/: Makefile  README.md
sta_ap/main/: CMakeLists.txt  Kconfig.projbuild  station_ap_main.c  station_example_main.c
station/main/: Kconfig.projbuild
(+101 files in other folders)
